tests/baselines/reference/stringIndexerAndConstructor.errors.txt
tests/cases/compiler/stringIndexerAndConstructor.ts(11,5): error TS2411: Property '""' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/stringIndexerAndConstructor.ts(12,5): error TS2411: Property 'd' of type '文字' is not assignable to string index type '数字'.


==== tests/cases/compiler/stringIndexerAndConstructor.ts (2 errors) ====
    class C {
        [s: string]: number;
        constructor() { }
        static v() { }
    }
    
    interface I {
        [s: string]: number;
        (): boolean;
        new (): boolean;
        "": string;
        ~~~~~~~~~~~
!!! error TS2411: Property '""' of type '文字' is not assignable to string index type '数字'.
        d: string;
        ~~~~~~~~~~
!!! error TS2411: Property 'd' of type '文字' is not assignable to string index type '数字'.
    }